--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <h2>Biography</h2>
+            <h2>About me</h2>
             <hr>
             <p class="text">
               <Div Align=justify> 
@@ -118,7 +118,7 @@
             <p>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of seismic-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
-              San Francisco, December 2023<br><br><br>
+              San Francisco (USA), December 2023<br><br><br>
             </p>
             <li>
               <b>Posters:</b>
@@ -126,7 +126,7 @@
             <p>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of seismic-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank">Congress of Young Researchers in Applied Mathematics</a>, Paris, September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
+              target="_blank">Congress of Young Researchers in Applied Mathematics</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
             </p>
           </p>
           
@@ -144,7 +144,7 @@
 
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Numerical modeling of the temperature distribution on the surface and in the depths of Mercury.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.esa.int/" target="_blank">European space agency (ESA)</a>, 
-                  Nordwijck, May - August 2020.<br><br>
+                  Nordwijck (Nederland), May - August 2020.<br><br>
                 </p>
             </p>
 
