--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation of Spectral Differences and CDO schemes for the resolution of Maxwell's equations.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.onera.fr/en" target="_blank">French Office for Aerospace 
-                  Studies and Research</a> , Toulouse (France), March - August 2021.<br>
+                  Studies and Research (ONERA)</a> , Toulouse (France), March - August 2021.<br>
 
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Numerical modeling of the temperature distribution on the surface and in the depths of Mercury.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.esa.int/" target="_blank">European space agency (ESA)</a>, 
