--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 
+<style>
+  li {
+    margin-bottom: -15px; /* Ajustez la valeur en fonction de l'espace souhaité */
+  }
+  p {
+    margin-bottom: -25px; /* Ajustez la valeur en fonction de l'espace souhaité */
+  }
+</style>
+
+
 <head>
   <title>Romain Mottier Webpage</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
@@ -100,15 +110,40 @@
               <a href="https://multix.io/data-science-book-uva/" target="_blank">Data Science</a>, 2022/2023, Informatics Institute, University of Amsterdam
             </li>
           </p> -->
-          <style>
-            li {
-              margin-bottom: -15px; /* Ajustez la valeur en fonction de l'espace souhaité */
-            }
-            p {
-              margin-bottom: -25px; /* Ajustez la valeur en fonction de l'espace souhaité */
-            }
-          </style>
+
           <!-- COONF -->
+          <h2 id="journal-paper">Research interests</h2>
+          <hr>
+          <p class="text-small-margin">
+            
+
+          <div class="col-container">
+            <div class="col">
+              <li>
+                <b>Numerical methods:</b><br>
+              </li>
+              <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Finite Element Methods (FEM)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Discontinuous Galerkin methods (DG)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid discontinuous methods (HDG - HHO)<br><br>
+              </p>
+            </div>
+          
+            <div class="col">
+              <li>
+                <b>Physics:</b><br>
+              </li>
+              <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Mechanics<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Fluid Mechanics<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Geophysics<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Climate modeling<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Biology<br><br>
+              </p>
+            </div>
+          </div>
+
           <h2 id="journal-paper">Communications</h2>
           <hr>
           <p class="text-small-margin">
