--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
 
                 As a computational scientist I have a strong background in <b>numerical methods</b> with competencies in <b>numercial analysis</b> for partial differential equations 
-                (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or electromagnetism)</b>. I am also 
+                (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or biology)</b>. I am also 
                 interested in the optimization and the portability of the numerical methods on <b>high performance computing architectures (HPC)</b>.<br><br>
 
                 More specifically, my research is focused on the use of <b>non conforming hybrid high-order finite element methods (HDG/HHO)</b> especially in the context of 
@@ -135,8 +135,7 @@
                 <b>Physics:</b><br>
               </li>
               <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Mechanics<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Fluid Mechanics<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Solid and Fluid Mechanics<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Geophysics<br> 
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Climate modeling<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Biology<br><br>
