--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black; target="_blank">Inria</a>. I am also 
                 co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
 
-                As a computational scientist I have a strong background in <b>numerical methods</b> with competencies in <b>numercial analysis</b> for partial differential equations 
-                (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or biology)</b>. I am also 
-                interested in the optimization and the portability of the numerical methods on <b>high performance computing architectures (HPC)</b>.<br><br>
+                As a computational scientist I have a strong background in <b>numerical methods</b> with competencies in <b>numercial analysis</b> for partial differential 
+                equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or biology)</b>. I am 
+                also interested in the optimization and the portability of the numerical methods on <b>high performance computing architectures (HPC)</b>.<br><br>
 
                 More specifically, my research is focused on the use of <b>non conforming hybrid high-order finite element methods (HDG/HHO)</b> especially in the context of 
                 <b>unfitted methods</b> (also known as embedded or immersed methods). These latter allow the boundary or physical interfaces to cut arbitrarily through the mesh 
@@ -150,7 +150,11 @@
               <b>Talks:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of seismic-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
+              Methods in Applied Sciences and Engineering (ECCOMAS)</a>,<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lisbon (Portugal), June 2024<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
               San Francisco (USA), December 2023<br><br><br>
             </p>
@@ -158,7 +162,7 @@
               <b>Posters:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of seismic-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
               target="_blank">Congress of Young Researchers in Applied Mathematics</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
             </p>
