--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
       <a href="file/CV.pdf">CV</a>
       <a href="https://github.com/romainmottier">GitHub</a>
       <a href="https://linkedin.com/in/romain-mottier-computational-physics">LinkedIn</a>
+      <a href="https://www.researchgate.net/profile/Romain-Mottier-2/research">Research Gate</a>
       <a href="https://scholar.google.com/citations?hl=fr&user=NhquH2oAAAAJ">Scholar</a>
       <!-- <a href="https://orcid.org/0009-0001-2967-7694">Orcid</a> -->
       <a href="teaching.html">Teaching</a>
