--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <head>
   <title>Romain Mottier</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> icone de page --> 
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/custom.css" media="screen" rel="stylesheet" type="text/css" />
@@ -154,9 +155,10 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
               Methods in Applied Sciences and Engineering (ECCOMAS)</a>,<br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lisbon (Portugal), June 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
-              San Francisco (USA), December 2023<br><br><br>
+              San Francisco (USA), December 2023<br><br> -->
+              <br>
             </p>
             <li>
               <b>Posters:</b>
