--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,8 @@
       <a href="https://scholar.google.com/citations?hl=fr&user=NhquH2oAAAAJ">Google Scholar</a>
       <!-- <a href="https://orcid.org/0009-0001-2967-7694">Orcid</a> -->
       <a href="teaching.html">Teaching</a>
+      <a href="index.html">ENG</a>
+      <a href="index_fr.html">FR</a>
     </div>
   </div>
 </div>
