--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <h2>2nd year of Bachelor's degree in Mathematics and Computer science Paris Dauphine University</h2>
+            <h2>2nd year of Bachelor's degree in Mathematics and Computer science,<br> Paris Dauphine University</h2>
             <hr>
             <p class="text-small-margin">
               <li>
@@ -59,7 +59,7 @@
               </p>
             </p>
 
-            <h2>2nd year of Bachelor's degree in Mathematics and Computer science Paris Dauphine University</h2>
+            <h2>1st year of Master's degree in Computational Mechanics,<br> Paris Sorbonne University</h2>
             <hr>
             <p class="text-small-margin">
               <li>
