--- a/index_fr.html
+++ b/index_fr.html
@@ -69,7 +69,7 @@
             <hr>
             <p class="text">
               <Div Align=justify> 
-                Je suis doctorant en mathématiques appliquées à la simulation numérique de problèmes physiques sous la direction d'<a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target="_blank"><b>Alexandre Ern</b></a> 
+                Je suis doctorant en mathématiques appliquées pour la simulation numérique de problèmes physiques sous la direction d'<a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target="_blank"><b>Alexandre Ern</b></a> 
                 au <a href="https://cermics-lab.enpc.fr/"; style="text-decoration: none; color: black; target="_blank">CERMICS (École des Ponts ParisTech)</a> 
                 et à l'<a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black; target="_blank">Inria</a>. Je suis également co-encadré par 
                 <b>Laurent Guillot</b> au <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
