--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
               Methods in Applied Sciences and Engineering (ECCOMAS)</a>,<br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lisbon (Portugal), June 2024<br>
-              <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
-              San Francisco (USA), December 2023<br><br> -->
               <br>
             </p>
             <li>
               <b>Posters:</b>
             </li>
             <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
+              San Francisco (USA), December 2023 <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
               target="_blank">Congress of Young Researchers in Applied Mathematics</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
