--- a/index_fr.html
+++ b/index_fr.html
@@ -49,7 +49,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" id="me" src="img/me.jpg">
+            <img class="image" id="me" src="img/me3.jpg">
           </div>
           <div class="flex-item flex-column">
             <h2>Romain Mottier</h2>
