--- a/index.html
+++ b/index.html
@@ -126,14 +126,13 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Finite Element Methods (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Discontinuous Galerkin methods (DG)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid discontinuous methods (HDG - HHO)<br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Discontinuous (and hybrid) Galerkin methods (DG - HDG - HHO - VEM)<br> 
               </p>
             </div>
           
             <div class="col">
               <li>
-                <b>Physics:</b><br>
+                <b>Application domains:</b><br>
               </li>
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Solid and Fluid Mechanics<br>
