--- a/index_fr.html
+++ b/index_fr.html
@@ -128,14 +128,13 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes "unfitted"<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes des éléments finis (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes de Galerkin discontinues (DG)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes hybrides discontinues (HDG - HHO)<br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes de Galerkin discontinues (et hybrides) (DG - HDG - HHO - VEM)<br> 
               </p>
             </div>
           
             <div class="col">
               <li>
-                <b>Physique:</b><br>
+                <b>Domaines d'applications:</b><br>
               </li>
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Mécanique des solides et des fluides<br>
