--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
               </li>
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Solid and Fluid Mechanics<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Geophysics<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Climate modeling<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Geophysics (wave propagation - climate modeling)<br> 
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Biology<br><br>
               </p>
             </div>
