--- a/index_fr.html
+++ b/index_fr.html
@@ -179,8 +179,8 @@
               </li>
                 <p>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation de la méthode des Différences Spectrales (SD) et d'une méthode mimétique (CDO scheme) 
-                  pour la résolution des 
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; équations de Maxwell dans le domaine temporel.<br>
+                  pour la résolution<br>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; des équations de Maxwell dans le domaine temporel.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.onera.fr/en" target="_blank">Office national d'études et de 
                   recherches aérospatiales (ONERA)</a> , Toulouse (France), Mars - Août 2021.<br>
 
