--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
               <b>Talks:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">World Congress on Computational Mechanics (ECCOMAS)</a>, 
+              Vancouver (Canada), July 2024<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
               Methods in Applied Sciences and Engineering (ECCOMAS)</a>,<br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lisbon (Portugal), June 2024<br>
