--- a/index.html
+++ b/index.html
@@ -149,25 +149,24 @@
               <b>Talks:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">World Congress on Computational Mechanics (ECCOMAS)</a>, 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank">World Congress on Computational Mechanics (WCCM)</a>, 
               Vancouver (Canada), July 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
-              Methods in Applied Sciences and Engineering (ECCOMAS)</a>,<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lisbon (Portugal), June 2024<br>
+              Methods in Applied Sciences and Engineering (ECCOMAS)</a>, Lisbon (Portugal), June 2024<br>
               <br>
             </p>
             <li>
               <b>Posters:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union</a>, 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union (AGU)</a>, 
               San Francisco (USA), December 2023 <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank">Congress of Young Researchers in Applied Mathematics</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
+              target="_blank">Congress of Young Researchers in Applied Mathematics (CJCMA)</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
             </p>
           </p>
           
