--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <b>Internships:</b><br>
               </li>
                 <p>
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation of Spectral Differences (SD) and a Mimetic method (CDO scheme) to solve Maxwell equations.<br>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation of Spectral Differences (SD) and a Compatible Discrete Operator (CDO) scheme to solve Maxwell equations.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.onera.fr/en" target="_blank">French Office for Aerospace 
                   Studies and Research (ONERA)</a> , Toulouse (France), March - August 2021.<br>
 
