--- a/index_fr.html
+++ b/index_fr.html
@@ -180,7 +180,7 @@
                 <b>Stages:</b><br>
               </li>
                 <p>
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation de la méthode des Différences Spectrales (SD) et d'une méthode mimétique (CDO scheme) 
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Implementation de la méthode des Différences Spectrales (SD) et d'un schéma CDO (Compatible Discrete Operator) 
                   pour la résolution<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; des équations de Maxwell dans le domaine temporel.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.onera.fr/en" target="_blank">Office national d'études et de 
