--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
               Methods in Applied Sciences and Engineering (ECCOMAS)</a>, Lisbon (Portugal), June 2024<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> National Congress of Numerical 
+              Analysis (CANUM)</a>, Ile de Ré (France), May 2024<br>
               <br>
             </p>
             <li>
