--- a/index.html
+++ b/index.html
@@ -149,24 +149,29 @@
               <b>Talks:</b>
             </li>
             <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I><b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b></I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank">World Congress on Computational Mechanics (WCCM)</a>, 
               Vancouver (Canada), July 2024<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b><font color="red">[PDF]</font></b></a><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
               Methods in Applied Sciences and Engineering (ECCOMAS)</a>, Lisbon (Portugal), June 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b>[PDF]</b></a><br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Unfitted HHO method stabilized by polynomial discrete extension</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> National Congress of Numerical 
               Analysis (CANUM)</a>, Ile de Ré (France), May 2024<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b>[PDF]</b></a><br>
               <br>
             </p>
+            <br>
             <li>
               <b>Posters:</b>
             </li>
             <p>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union (AGU)</a>, 
-              San Francisco (USA), December 2023 <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
+              San Francisco (USA), December 2023 <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
               target="_blank">Congress of Young Researchers in Applied Mathematics (CJCMA)</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
