--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </li>
             <p>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I><b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b></I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank">World Congress on Computational Mechanics (WCCM)</a>, 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank"><I> Congress on Computational Mechanics (WCCM)</I></a>, 
               Vancouver (Canada), July 2024<br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b><font color="red">[PDF]</font></b></a><br>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
