--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p class="text">
               <Div Align=justify> 
                 I am a PhD student in applied mathematics for the numerical simulation of physic problems under the direction of 
-                <a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target="_blank"><b>Alexandre Ern</b></a> at 
+                <a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target:"_blank"><b>Alexandre Ern</b></a> at 
                 <a href="https://cermics-lab.enpc.fr/"; style="text-decoration: none; color: black; target="_blank">CERMICS, École des Ponts ParisTech</a> 
                 and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black; target="_blank">Inria</a>. I am also 
                 co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
@@ -142,40 +142,32 @@
             </div>
           </div>
 
-          <h2 id="journal-paper">Communications</h2>
+          <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
-            <li>
-              <b>Talks:</b>
-            </li>
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I><b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b></I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank"><I> Congress on Computational Mechanics (WCCM)</I></a>, 
-              Vancouver (Canada), July 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b><font color="red">[PDF]</font></b></a><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
-              Methods in Applied Sciences and Engineering (ECCOMAS)</a>, Lisbon (Portugal), June 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b>[PDF]</b></a><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Unfitted HHO method stabilized by polynomial discrete extension</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> National Congress of Numerical 
-              Analysis (CANUM)</a>, Ile de Ré (France), May 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=""><b>[PDF]</b></a><br>
-              <br>
-            </p>
-            <br>
-            <li>
-              <b>Posters:</b>
-            </li>
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union (AGU)</a>, 
-              San Francisco (USA), December 2023 <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank">Congress of Young Researchers in Applied Mathematics (CJCMA)</a>, Paris (France), September 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
-            </p>
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              <a href="https://www.wccm2024.org/" target="_blank"><I> 
+              World Congress on Computational Mechanics (WCCM)</I></a> &nbsp; - &nbsp; Vancouver (Canada) &nbsp; - &nbsp;
+              July 2024 <a href=""> &nbsp; - &nbsp; <b>[PDF]</b></a><br><br>
+
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
+              (ECCOMAS)</I></a> &nbsp; - &nbsp; Lisbon (Portugal) &nbsp; - &nbsp; June 2024 &nbsp; - &nbsp; <a href=""><b>[PDF]</b></a><br><br>
+
+              Unfitted HHO method stabilized by polynomial discrete extension<br> 
+              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
+              Analysis (CANUM)</I></a> &nbsp; - &nbsp; Ile de Ré (France) &nbsp; - &nbsp; May 2024 &nbsp; - &nbsp; <a href=""><b>[PDF]</b></a>
+          </p>
+          <h2 id="journal-paper">Posters</h2>
+          <hr>
+          <p class="text-small-margin">
+              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> &nbsp; - &nbsp; 
+              San Francisco (USA) &nbsp; - &nbsp; December 2023 &nbsp; - &nbsp; <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br><br>
+              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
+              target="_blank"><I>Congress of Young Researchers in Applied Mathematics (CJCMA)</I></a> &nbsp; - &nbsp; Paris (France) &nbsp; - &nbsp;
+              September 2023 &nbsp; - &nbsp; <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
           </p>
           
           <!-- Experiences -->
